Resolving code smell and update test cases.